# daily-security-feed

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: pages.yml  secret_rotation_reminder.yml  security_feed.yml
_layouts/: post.html
feeds/: feeds.yaml
logs/: urls.txt
pipeline/: classify.py  common.py  config.py  fetch_feeds.py  injection_scanner.py  notify_discord.py  notify_slack.py  persist_state.py  remind_rotate.py  write_vault.py
prompts/: classify.md
scripts/: classify.py  config.py  fetch_feeds.py  notify_slack.py  persist_state.py  write_vault.py
site/: Gemfile  _config.yml  index.html
site/_includes/: metadata-hook.html
site/_layouts/: default.html  home.html  post.html
site/_posts/: 2026-04-04-six-accounts-one-actor-inside-the-prt-scan-supply-chain-camp.md  2026-04-05-htb-darkzero.md  2026-04-07-understanding-current-threats-to-kubernetes-environments.md  2026-04-07-what-is-llm-penetration-testing-a-complete-guide.md  2026-04-08-adversaries-sometimes-compute-gradients-other-times-they-rob.md  2026-04-08-building-a-detection-foundation-part-5-correlation-in-practi.md  2026-04-08-cracks-in-the-bedrock-escaping-the-aws-agentcore-sandbox.md  2026-04-08-introducing-macnoise.md  2026-04-08-introducing-the-offsec-ml-playbook-v01.md  2026-04-08-kernel-drivers-process-protection-and-bears.md  2026-04-08-model-confusion-weaponizing-ml-models-for-red-teams-and-boun.md  2026-04-08-reversing-elfs-on-tryhackme-crackme8.md  (+512 more)
state/: processed_urls.json
tests/: test_site.py
(+4 files in other folders)
