[project]
name = "security-rss-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser==6.0.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.49",
]
test = [
    "pytest>=7.0,<9",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]
